<resources>
    <string name="app_name">Tutors</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>

    <string name="home">الرئيسية</string>
    <string name="login">تسجيل دخول</string>
    <string name="register_teacher_membership">تسجيل عضوية معلم</string>
    <string name="register_student_membership">تسجيل عضوية طالب</string>
    <string name="search_about_teacher">بحث عن معلم</string>
    <string name="about_app">عن التطبيق</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_register_teacher_membership">RegisterTeacherMembershipActivity
    </string>
    <string name="login_now"><u>سجل دخولك الان</u></string>
    <string name="fill_this_data">قم بتعبئة البيانات التاليه لتسجيل عضوية جديدة :</string>
    <string name="if_you_have">إذا كانت لديك عضوية مسبقا ؟</string>
    <string name="write_about_you">اكتب نبذه مختصره عنك سوف تظهر فى عضويتك اسفل صورتك...</string>
    <string name="addPhoto">أضف صورتي</string>
    <string name="full_name">الاسم بالكامل</string>
    <string name="school_subjects">المواد التى أدرسها</string>
    <string name="password">كلمة المرور</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="cost_of_hour">سعر الساعة بالعملة المحلية</string>
    <string name="register">تسجيل عضوية</string>
    <string name="register_moders">تسجيل عضوية مدرس</string>
    <string name="title_activity_login_teacher">LoginTeacherActivity</string>
    <string name="login_teacher">تسجيل دخول</string>
    <string name="rate">التقييم</string>
    <string name="who_r_me">من أنا</string>
    <string name="rates">التقييمات</string>
    <string name="title_activity_login_student">LoginStudentActivity</string>
    <string name="title_activity_register_student_membership">RegisterStudentMembershipActivity
    </string>
    <string name="for_log_you_in"><u>لتسجيل دخولك</u></string>
    <string name="for_sign_you_in"><u>لتسجيل عضويتك</u></string>

</resources>
