<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home" />
        <item
            android:id="@+id/login"
            android:title="@string/login" />
        <item
            android:id="@+id/register_teacher_membership"
            android:title="@string/register_teacher_membership" />
        <item
            android:id="@+id/register_student_membership"
            android:title="@string/register_student_membership" />
        <item
            android:id="@+id/search_about_teacher"
            android:title="@string/search_about_teacher" />
        <item
            android:id="@+id/about_app"
            android:title="@string/about_app" />
        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us" />
    </group>
</menu>
