<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="perfect_apps.tutors.activities.RegisterTeacherMembershipActivity"
    tools:showIn="@layout/activity_register_teacher_membership"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="none">
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="#faf8f9"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@id/text1"
                android:textColor="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/login_now"
                android:textSize="12sp"
                android:onClick="goToLogin"/>
            <TextView
                android:id="@+id/text2"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_you_have"
                android:textSize="12sp" />
            <ImageView
                android:contentDescription="@null"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/log_in_icon"
                android:padding="10dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text3"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_this_data"
            android:textColor="#000000"/>

        </LinearLayout>
</ScrollView>
