<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="perfect_apps.tutors.activities.LoginTeacherActivity"
    tools:showIn="@layout/activity_login_teacher"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="none">
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="?android:attr/listPreferredItemHeight"
        android:src="@drawable/login_user_ico"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_shape"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionUnspecified"
                android:background="#00000000"
                android:gravity="top" />
            <ImageView
                android:contentDescription="@null"
                android:layout_width="30dp"
                android:padding="3dp"
                android:layout_margin="1dp"
                android:background="#f8f8f8"
                android:layout_height="match_parent"
                android:src="@drawable/mail_ico"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/border_shape"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionUnspecified"
                android:background="#00000000"
                android:gravity="right" />
            <ImageView
                android:contentDescription="@null"
                android:layout_width="30dp"
                android:padding="3dp"
                android:layout_margin="1dp"
                android:background="#f8f8f8"
                android:layout_height="match_parent"
                android:src="@drawable/pass_ico"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/border_shape_blue"
            android:orientation="horizontal"
            android:onClick="registerNewUser">
            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                style="?android:attr/textAppearanceMedium"
                android:background="#00000000" />
            <ImageView
                android:contentDescription="@null"
                android:layout_width="48dp"
                android:padding="8dp"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:layout_height="match_parent"
                android:src="@drawable/log_btn_ico"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
